--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -11,9 +11,23 @@
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="60dp"
         android:layout_weight="1">
     </FrameLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_live"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_anchor="@id/content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="80dp"
+        android:paddingBottom="6dp"
+        app:layout_anchorGravity="bottom|right|end"
+        android:src="@drawable/ic_live"
+        android:clickable="true"/>
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -23,4 +37,5 @@
         android:background="?android:attr/windowBackground"
         app:menu="@menu/navigation" />
 
-</LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
