--- a/app/src/main/res/layout/fragment_rank_detail.xml
+++ b/app/src/main/res/layout/fragment_rank_detail.xml
@@ -71,11 +71,11 @@
                 >
             </TextView>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:textSize="12sp"
                 android:textColor="#8a000000"
-                android:minWidth="50sp"
+                android:layout_gravity="bottom|right"
                 android:layout_marginTop="10sp"
                 android:text="Time">
             </TextView>
@@ -102,19 +102,176 @@
         </TableRow>
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:text="1. Meantime"
+                android:textSize="13sp"
+                android:textColor="#8a000000"
+                android:paddingRight="30dp"
+                >
+            </TextView>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m1_time"
+                android:layout_gravity="right"
+                android:textSize="13sp"
+                android:textColor="@color/colorRankTableFieldText"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m1_best"
+                android:layout_gravity="right"
+                android:textSize="13sp"
+                android:textColor="@color/colorRankTableFieldText"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:id="@+id/rank_detail_m1_me"
+                android:textSize="13sp"
+                android:textColor="@color/colorRankTableFieldText"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="2. Meantime"
+                android:textSize="13sp"
+                android:textColor="#8a000000"
+                >
+            </TextView>
+            <TextView
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m2_time"
+                android:layout_width="70dp"
+                android:layout_gravity="right"
+                android:textSize="13sp"
+                android:textColor="@color/colorRankTableFieldText"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_gravity="right"
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m2_best"
+                android:textSize="13sp"
+                android:textColor="@color/colorRankTableFieldText"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_gravity="right"
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m2_me"
+                android:textSize="13sp"
+                android:textColor="@color/colorRankTableFieldText"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="3. Meantime"
+                android:textSize="13sp"
+                android:textColor="#8a000000"
+                >
+            </TextView>
+            <TextView
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m3_time"
+                android:layout_width="70dp"
+                android:layout_gravity="right"
+                android:textSize="13sp"
+                android:textColor="@color/colorRankTableFieldText"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_gravity="right"
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m3_best"
+                android:textSize="13sp"
+                android:textColor="@color/colorRankTableFieldText"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_gravity="right"
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m3_me"
+                android:textSize="13sp"
+                android:textColor="@color/colorRankTableFieldText"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="Total"
+                android:textSize="13sp"
+                android:textColor="#8a000000"
+                >
+            </TextView>
+            <TextView
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m4_time"
+                android:layout_width="70dp"
+                android:layout_gravity="right"
+                android:textSize="13sp"
+                android:textColor="@color/colorPrimary"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_gravity="right"
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m4_best"
+                android:textSize="13sp"
+                android:textColor="@color/colorPrimary"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_gravity="right"
+                android:layout_height="match_parent"
+                android:id="@+id/rank_detail_m4_me"
+                android:textSize="13sp"
+                android:textColor="@color/colorPrimary"
+                android:minWidth="50sp"
+                android:text="">
+            </TextView>
+        </TableRow>
     </TableLayout>
 
     <TextView
