--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -221,6 +221,7 @@
     <dimen name="details_label_text_size">16sp</dimen>
     <dimen name="details_value_text_size">20sp</dimen>
     <dimen name="details_margin_top">10dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 
 </resources>
