--- a/app/src/main/res/layout/fragment_rank_detail.xml
+++ b/app/src/main/res/layout/fragment_rank_detail.xml
@@ -49,8 +49,8 @@
         android:id="@+id/current_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20sp"
-        android:layout_marginTop="20sp"
+        android:layout_marginBottom="10sp"
+        android:layout_marginTop="10sp"
         android:text="1:19:85"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
@@ -109,7 +109,7 @@
 
 
         <TableRow
-            android:layout_marginBottom="10sp"
+            android:layout_marginBottom="5sp"
             android:minHeight="50dp"
             android:paddingLeft="10dp">
             <TextView
@@ -121,32 +121,35 @@
                 >
             </TextView>
             <LinearLayout android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="16sp"
-                android:textColor="@color/colorRankTableHeader"
-                android:textAlignment="textEnd"
-                android:layout_gravity="end|bottom"
-                android:layout_marginTop="10sp"
-                android:text="20,00">
-            </TextView>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="10sp"
-                android:textColor="@color/colorRankTableRed"
-                android:textAlignment="textEnd"
-                android:layout_gravity="end|bottom"
-                android:layout_marginTop="0sp"
-                android:text="+00,74">
-            </TextView>
+                <TextView
+                    android:id="@+id/rank_detail_m1_best_abs"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorRankTableHeader"
+                    android:textAlignment="textEnd"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginTop="10sp"
+                    android:text="">
+                </TextView>
+                <TextView
+                    android:id="@+id/rank_detail_m1_best_rel"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="10sp"
+                    android:textColor="@color/colorRankPositive"
+                    android:textAlignment="textEnd"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginTop="0sp"
+                    android:text="">
+                </TextView>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/rank_detail_m1_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="20,74"
+                android:text=""
                 android:textSize="20sp"
                 android:layout_gravity="center|bottom"
                 android:textAlignment="center"
@@ -155,26 +158,28 @@
             </TextView>
 
             <LinearLayout android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="23,93"
-                android:textSize="16sp"
-                android:textAlignment="textStart"
-                android:layout_gravity="start|bottom"
-                android:layout_marginTop="10sp"
-                android:textColor="@color/colorRankTableHeader">
-            </TextView>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="10sp"
-                android:textColor="@color/colorRankTableGreen"
-                android:textAlignment="textStart"
-                android:layout_gravity="start|bottom"
-                android:layout_marginTop="0sp"
-                android:text="+00,74">
-            </TextView>
+                <TextView
+                    android:id="@+id/rank_detail_m1_me_abs"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    android:textSize="16sp"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginTop="10sp"
+                    android:textColor="@color/colorRankTableHeader">
+                </TextView>
+                <TextView
+                    android:id="@+id/rank_detail_m1_me_rel"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="10sp"
+                    android:textColor="@color/colorRankPositive"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginTop="0sp"
+                    android:text="">
+                </TextView>
             </LinearLayout>
         </TableRow>
 
@@ -183,6 +188,7 @@
             android:minHeight="50dp"
             android:background="@color/colorRankTableBackground"
             android:paddingLeft="10dp"
+            android:layout_marginRight="10dp"
             >
             <TextView
                 android:layout_width="match_parent"
@@ -194,6 +200,7 @@
             </TextView>
             <LinearLayout android:orientation="vertical">
                 <TextView
+                    android:id="@+id/rank_detail_m2_best_abs"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="16sp"
@@ -201,24 +208,26 @@
                     android:textAlignment="textEnd"
                     android:layout_gravity="end|bottom"
                     android:layout_marginTop="10sp"
-                    android:text="20,00">
+                    android:text="">
                 </TextView>
                 <TextView
+                    android:id="@+id/rank_detail_m2_best_rel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="10sp"
-                    android:textColor="@color/colorRankTableRed"
+                    android:textColor="@color/colorRankPositive"
                     android:textAlignment="textEnd"
                     android:layout_gravity="end|bottom"
                     android:layout_marginTop="0sp"
-                    android:text="+00,74">
+                    android:text="">
                 </TextView>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/rank_detail_m2_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="20,74"
+                android:text=""
                 android:textSize="20sp"
                 android:layout_gravity="center|bottom"
                 android:textAlignment="center"
@@ -228,9 +237,10 @@
 
             <LinearLayout android:orientation="vertical">
                 <TextView
+                    android:id="@+id/rank_detail_m2_me_abs"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="23,93"
+                    android:text=""
                     android:textSize="16sp"
                     android:textAlignment="textStart"
                     android:layout_gravity="start|bottom"
@@ -238,14 +248,15 @@
                     android:textColor="@color/colorRankTableHeader">
                 </TextView>
                 <TextView
+                    android:id="@+id/rank_detail_m2_me_rel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="10sp"
-                    android:textColor="@color/colorRankTableGreen"
+                    android:textColor="@color/colorRankPositive"
                     android:textAlignment="textStart"
                     android:layout_gravity="start|bottom"
                     android:layout_marginTop="0sp"
-                    android:text="+00,74">
+                    android:text="">
                 </TextView>
             </LinearLayout>
         </TableRow>
@@ -253,7 +264,9 @@
         <TableRow
             android:layout_marginBottom="10sp"
             android:minHeight="50dp"
-            android:paddingLeft="10dp">
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -264,6 +277,7 @@
             </TextView>
             <LinearLayout android:orientation="vertical">
                 <TextView
+                    android:id="@+id/rank_detail_m3_best_abs"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="16sp"
@@ -271,24 +285,26 @@
                     android:textAlignment="textEnd"
                     android:layout_gravity="end|bottom"
                     android:layout_marginTop="10sp"
-                    android:text="20,00">
+                    android:text="">
                 </TextView>
                 <TextView
+                    android:id="@+id/rank_detail_m3_best_rel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="10sp"
-                    android:textColor="@color/colorRankTableRed"
+                    android:textColor="@color/colorRankPositive"
                     android:textAlignment="textEnd"
                     android:layout_gravity="end|bottom"
                     android:layout_marginTop="0sp"
-                    android:text="+00,74">
+                    android:text="">
                 </TextView>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/rank_detail_m3_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="20,74"
+                android:text=""
                 android:textSize="20sp"
                 android:layout_gravity="center|bottom"
                 android:textAlignment="center"
@@ -298,9 +314,10 @@
 
             <LinearLayout android:orientation="vertical">
                 <TextView
+                    android:id="@+id/rank_detail_m3_me_abs"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="23,93"
+                    android:text=""
                     android:textSize="16sp"
                     android:textAlignment="textStart"
                     android:layout_gravity="start|bottom"
@@ -308,14 +325,15 @@
                     android:textColor="@color/colorRankTableHeader">
                 </TextView>
                 <TextView
+                    android:id="@+id/rank_detail_m3_me_rel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="10sp"
-                    android:textColor="@color/colorRankTableGreen"
+                    android:textColor="@color/colorRankPositive"
                     android:textAlignment="textStart"
                     android:layout_gravity="start|bottom"
                     android:layout_marginTop="0sp"
-                    android:text="+00,74">
+                    android:text="">
                 </TextView>
             </LinearLayout>
         </TableRow>
@@ -325,6 +343,7 @@
             android:minHeight="50dp"
             android:background="@color/colorRankTableBackground"
             android:paddingLeft="10dp"
+            android:layout_marginRight="10dp"
             >
             <TextView
                 android:layout_width="match_parent"
@@ -336,6 +355,7 @@
             </TextView>
             <LinearLayout android:orientation="vertical">
                 <TextView
+                    android:id="@+id/rank_detail_m4_best_abs"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="16sp"
@@ -343,24 +363,26 @@
                     android:textAlignment="textEnd"
                     android:layout_gravity="end|bottom"
                     android:layout_marginTop="10sp"
-                    android:text="20,00">
+                    android:text="">
                 </TextView>
                 <TextView
+                    android:id="@+id/rank_detail_m4_best_rel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="10sp"
-                    android:textColor="@color/colorRankTableRed"
+                    android:textColor="@color/colorRankPositive"
                     android:textAlignment="textEnd"
                     android:layout_gravity="end|bottom"
                     android:layout_marginTop="0sp"
-                    android:text="+00,74">
+                    android:text="">
                 </TextView>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/rank_detail_m4_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="20,74"
+                android:text=""
                 android:textSize="20sp"
                 android:layout_gravity="center|bottom"
                 android:textAlignment="center"
@@ -370,9 +392,10 @@
 
             <LinearLayout android:orientation="vertical">
                 <TextView
+                    android:id="@+id/rank_detail_m4_me_abs"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="23,93"
+                    android:text=""
                     android:textSize="16sp"
                     android:textAlignment="textStart"
                     android:layout_gravity="start|bottom"
@@ -380,36 +403,18 @@
                     android:textColor="@color/colorRankTableHeader">
                 </TextView>
                 <TextView
+                    android:id="@+id/rank_detail_m4_me_rel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="10sp"
-                    android:textColor="@color/colorRankTableGreen"
+                    android:textColor="@color/colorRankPositive"
                     android:textAlignment="textStart"
                     android:layout_gravity="start|bottom"
                     android:layout_marginTop="0sp"
-                    android:text="+00,74">
+                    android:text="">
                 </TextView>
             </LinearLayout>
         </TableRow>
-
-
-
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </TableLayout>
 
     <TextView
