--- a/app/src/main/res/layout/social_image_card.xml
+++ b/app/src/main/res/layout/social_image_card.xml
@@ -10,66 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/flag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="3dp"
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/aus" />
-
-
-        <TextView
-            android:id="@+id/geolocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/flag"
-            android:layout_marginTop="3dp"
-
-            android:layout_marginLeft="4dp"
-            android:text="Kitzbühl"
-            android:textSize="10dp" />
-
-        <TextView
-            android:id="@+id/timestamp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="3dp"
-            android:text="3h ago"
-            android:textSize="10dp" />
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/post_image"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-
-            android:layout_below="@id/timestamp"
             android:scaleType="centerCrop"
             android:src="@drawable/example_selfie" />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-
-            android:layout_below="@id/image"
-            android:layout_marginBottom="1dp"
-
-            android:layout_marginTop="1dp"
-
-            android:background="#787878" />
 
         <LinearLayout
             android:id="@+id/feedback_line"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_below="@id/divider">
-
+            android:layout_below="@id/post_image"
+            android:layout_marginLeft="5dp">
 
             <Button
                 android:id="@+id/facebook_button"
@@ -129,14 +83,43 @@
                 android:textSize="10dp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:id="@+id/time_location"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/feedback_line"
+            android:layout_marginLeft="5dp">
+            <TextView
+                android:id="@+id/geolocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_below="@id/feedback_line"
+                android:text="Kitzbühl, "
+                />
+
+            <TextView
+                android:id="@+id/timestamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/feedback_line"
+                android:layout_toRightOf="@id/geolocation"
+                android:text="3h ago" />
+        </LinearLayout>
+
+
         <TextView
             android:id="@+id/post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_below="@id/feedback_line"
+            android:textColor="#000000"
+            android:layout_below="@id/time_location"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore " />
 
     </RelativeLayout>
